--- a/app/src/main/res/layout/item_exercise.xml
+++ b/app/src/main/res/layout/item_exercise.xml
@@ -59,13 +59,15 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
                     android:layout_marginEnd="4dp"
+                    android:autoSizeMaxTextSize="20sp"
+                    android:autoSizeTextType="uniform"
                     android:autofillHints="@string/untitled"
                     android:backgroundTint="@color/white"
                     android:gravity="center|center_vertical"
                     android:minHeight="48dp"
                     android:text="@{workoutExerciseAndExercise.exercise.name, default=@string/enter_text}"
                     android:textColor="#004D40"
-                    android:textSize="16sp"
+                    android:textSize="20sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/button_info_exercise_item"
                     app:layout_constraintStart_toEndOf="@+id/button_amount_exercise_item"
