--- a/app/src/main/res/layout/item_workout.xml
+++ b/app/src/main/res/layout/item_workout.xml
@@ -45,11 +45,14 @@
                     android:id="@+id/text_title_workout_item"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:autoSizeMaxTextSize="24sp"
+                    android:autoSizeTextType="uniform"
                     android:autofillHints=""
                     android:fontFamily="sans-serif"
                     android:gravity="center|center_vertical"
                     android:hint="@string/title_workouts"
                     android:inputType="none"
+                    android:maxLines="1"
                     android:minHeight="48dp"
                     android:text="@{workout.name}"
                     android:textColor="@color/white"
