--- a/app/src/main/res/drawable/ic_x_red_24dp.xml
+++ b/app/src/main/res/drawable/ic_x_red_24dp.xml
@@ -1,12 +1,11 @@
-<vector
-    android:height="24dp"
-    android:viewportHeight="8"
-    android:viewportWidth="8"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="8"
 
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:viewportHeight="8">
     <path
         android:fillColor="#FF0000"
-        android:strokeColor="#FF0000"
-        android:pathData="M1.41,0l-1.41,1.41 0.72,0.72 1.78,1.81 -1.78,1.78 -0.72,0.69 1.41,1.44 0.72,-0.72 1.81,-1.81 1.78,1.81 0.69,0.72 1.44,-1.44 -0.72,-0.69 -1.81,-1.78 1.81,-1.81 0.72,-0.72 -1.44,-1.41 -0.69,0.72 -1.78,1.78 -1.81,-1.78 -0.72,-0.72z"/>
+        android:pathData="M1.41,0l-1.41,1.41 0.72,0.72 1.78,1.81 -1.78,1.78 -0.72,0.69 1.41,1.44 0.72,-0.72 1.81,-1.81 1.78,1.81 0.69,0.72 1.44,-1.44 -0.72,-0.69 -1.81,-1.78 1.81,-1.81 0.72,-0.72 -1.44,-1.41 -0.69,0.72 -1.78,1.78 -1.81,-1.78 -0.72,-0.72z"
+        android:strokeColor="#FF0000" />
 </vector>
