--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,17 +1,21 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Base application theme. -->
-    <style name="Theme.SG2022WeGotTheMoves" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.SG2022WeGotTheMoves" parent="Theme.MaterialComponents.DayNight">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/sg_design_green</item>
-        <item name="colorPrimaryVariant">@color/sg_design_green</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/sg_design_green</item>
-        <item name="colorSecondaryVariant">@color/sg_design_green</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/sg_design_light_green</item>
+        <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@color/sg_design_green</item>
         <item name="colorSurface">@color/sg_design_green</item>
-        <!-- Customize your theme here. -->
+        <!-- Custom design -->
+        <item name="actionBarTheme">@style/Theme.ActionBar</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="Theme.ActionBar" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <item name="android:textColorPrimary">@android:color/white</item>
     </style>
 </resources>
