--- a/app/src/main/res/layout/dialog_between_exercise_screen.xml
+++ b/app/src/main/res/layout/dialog_between_exercise_screen.xml
@@ -14,7 +14,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraint_layout_dialog"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:background="@color/sg_design_green">
 
         <TextView
             android:id="@+id/next_exercise_titel"
@@ -38,14 +39,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/next_exercise_titel" />
 
-        <TextView
-            android:id="@+id/countdown"
+        <Chronometer
+            android:id="@+id/pause_countdown"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="TextView"
             android:textSize="30sp"
-            android:visibility="invisible"
+            android:visibility="visible"
+            android:layout_marginBottom="32dp"
+            android:countDown="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/next_exercise" />
