show pause_screen before first exercise and added amount to screen

--- a/app/src/main/res/layout/dialog_between_exercise_screen.xml
+++ b/app/src/main/res/layout/dialog_between_exercise_screen.xml
@@ -14,7 +14,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraint_layout_dialog"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/sg_design_green">
 
         <TextView
@@ -29,6 +29,17 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/pause_screen_excercise_amount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="TextView"
+            android:textSize="30sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/next_exercise_titel" />
+
+        <TextView
             android:id="@+id/next_exercise"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -37,17 +48,18 @@
             android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/next_exercise_titel" />
+            app:layout_constraintTop_toBottomOf="@+id/pause_screen_excercise_amount" />
 
         <Chronometer
             android:id="@+id/pause_countdown"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:textSize="30sp"
-            android:visibility="visible"
             android:layout_marginBottom="32dp"
             android:countDown="true"
+            android:textSize="30sp"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/next_exercise" />
