--- a/app/src/main/res/layout/dialog_between_exercise_screen.xml
+++ b/app/src/main/res/layout/dialog_between_exercise_screen.xml
@@ -37,18 +37,7 @@
             android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/next_exercise_titel" />
-
-        <TextView
-            android:id="@+id/next_exercise"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="@{exercise.name, default=@string/enter_text}"
-            android:textSize="30sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/pause_screen_excercise_amount" />
+            app:layout_constraintTop_toBottomOf="@id/next_exercise_titel" />
 
         <Chronometer
             android:id="@+id/pause_countdown"
@@ -62,6 +51,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/next_exercise" />
+            app:layout_constraintTop_toBottomOf="@id/pause_screen_excercise_amount" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
