--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -8,20 +8,29 @@
     tools:context="com.sg2022.we_got_the_moves.ui.statistics.StatisticsFragment">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textview_statistics"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Traings last Week"
-        android:textSize="20sp"
+        android:layout_marginTop="8dp"
+        android:text="@string/enter_text"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.github.mikephil.charting.charts.BarChart
-        android:id="@+id/barChart"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
+    <com.github.mikephil.charting.charts.PieChart
+        android:id="@+id/pie_chart_statistics"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        android:hapticFeedbackEnabled="false"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textview_statistics"
+        app:layout_constraintWidth="match_parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
